# auto-endpoint

backend/: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  bandit.yaml  copier.yml  logging.ini  main.py  mypy.ini  pyproject.toml  requirements.txt
backend/app/: lifespan.py  main.py
backend/app/adapters/cache/: cache.py
backend/app/adapters/db/: session.py
backend/app/adapters/db/models/: base_model.py  env_model.py  user_model.py
backend/app/adapters/db/repositories/: base_repo.py  base_repositories.py  env_repo.py  user_repositories.py
backend/app/adapters/messaging/: celery_app.py
backend/app/api/: router.py
backend/app/api/dependencies/: dependencies.py
backend/app/api/v1/: redis_controller.py  user_controller.py
backend/app/api/v1/endpoints/: cache.py  env.py  user.py
backend/app/api/v1/schemas/: cache_schema.py  env_schema.py  user_schema.py
backend/app/core/: cache.py  celery_app.py  config.py  database.py  exception.py  exceptions.py  logger.py  security.py
backend/app/core/domain/: base_domain.py  user_domain.py
backend/app/core/services/: base_service.py  env_service.py  user_service.py
backend/app/events/consumers/: consumer.py
backend/app/events/producers/: __init__.py
backend/app/middleware/: exception_handler.py  request_id.py
backend/app/models/domain/: user.py
backend/app/models/orm/: user.py
backend/app/repositories/: user_repo.py
backend/app/services/: user_service.py
backend/app/utils/: deps.py  logging.py
backend/app/workers/: tasks.py
backend/conf/: dev.env  dev.env.example  prod.env
backend/k8s/: Dockerfile
backend/k8s/kustomize/base/: deployment.yaml  ingress.yaml  service.yaml
backend/test/: conftest.py
backend/tests/: test_user.py
frontend/: package-lock.json  package.json
